kubernetes/apps/apps/excalidraw/excalidraw/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      targetPort: 80
      port: 80
  type: ClusterIP
