kubernetes/apps/apps/excalidraw/excalidraw/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app excalidraw-ingress
  # labels:
  #   nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host excalidraw.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
    - host: &host excalidraw.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
  tls:
  - hosts:
      - excalidraw.icylair.com
      - excalidraw.cloud.icylair.com
    secretName: icylair-com-all-prod
